# agent-sandbox

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/my_adk_agent/: __init__.py  run_agent.py
src/my_adk_agent/agents/: __init__.py  simple_agent.py
tests/: test_agent_builds.py
